--- a/modules/holodeckb2b-common/pom.xml
+++ b/modules/holodeckb2b-common/pom.xml
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>holodeckb2b-it</artifactId>
-            <version>next-SNAPSHOT-3</version>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
 
