Moved integration tests to the separate module.

--- a/modules/holodeckb2b-common/pom.xml
+++ b/modules/holodeckb2b-common/pom.xml
@@ -62,7 +62,7 @@
         <!-- Dependencies specific for testing -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>holodeckb2b-it</artifactId>
+            <artifactId>holodeckb2b-it_lib</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
