--- a/modules/holodeckb2b-core/pom.xml
+++ b/modules/holodeckb2b-core/pom.xml
@@ -42,8 +42,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>default-persistency</artifactId>
-            <scope>test</scope>
+            <artifactId>holodeckb2b-persistency</artifactId>
         </dependency>
 
         <!-- Apache Axis2 kernel -->
