Fix problem with not completely loaded message unit entities Added Renate as developer

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
                 <role>Lead developer</role>
             </roles>
         </developer>
+        <developer>
+            <name>Renate Slebe</name>
+            <email>renate at chasquis-service.com</email>
+            <roles>
+                <role>QA and Documentation</role>
+            </roles>
+        </developer>
     </developers>
     <contributors>
         <contributor>
