Switched off doclint to make javadoc generation possible. See http://blog.joda.org/2014/02/turning-off-doclint-in-jdk-8-javadoc.html for details.

--- a/pom.xml
+++ b/pom.xml
@@ -314,6 +314,7 @@
                     <configuration>
                         <!-- all javadoc of common and core together, so use aggregate -->
                         <aggregate>true</aggregate>
+                        <additionalparam>-Xdoclint:none</additionalparam>
                     </configuration>
                     <executions>
                         <execution>
