--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <!--
 
-    Copyright (C) 2014 The Holodeck B2B Team, Sander Fieten
+    Copyright (C) 2014-2017 The Holodeck B2B Team, Sander Fieten
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -51,7 +51,7 @@
         </developer>
         <developer>
             <name>Renate Slebe</name>
-            <email>renate at chasquis-services.com</email>
+            <email>renate at chasquis-consulting.com</email>
             <roles>
                 <role>QA and Documentation</role>
             </roles>
