--- a/modules/holodeckb2b-common/pom.xml
+++ b/modules/holodeckb2b-common/pom.xml
@@ -1,6 +1,6 @@
 <!--
 
-    Copyright (C) 2014 The Holodeck B2B Team, Sander Fieten
+    Copyright (C) 2015-2017 The Holodeck B2B Team, Sander Fieten
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b</artifactId>
-        <version>2.1.4-SNAPSHOT-1</version>
+        <version>2.1.4-SNAPSHOT-2</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
