--- a/modules/holodeckb2b-core/pom.xml
+++ b/modules/holodeckb2b-core/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b</artifactId>
-        <version>3.0.0</version>
+        <version>3.0.1-SNAPSHOT-1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
