--- a/modules/holodeckb2b-core/pom.xml
+++ b/modules/holodeckb2b-core/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b</artifactId>
-        <version>3.0.2-SNAPSHOT-1</version>
+        <version>3.0.2-SNAPSHOT-2</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -67,7 +67,7 @@
             <artifactId>axiom-dom</artifactId>
             <scope>runtime</scope>
         </dependency>
-        <!-- WS-Addressing libs for multi-hop support -->
+        <!-- WS-Addressing libs required for multi-hop support -->
         <dependency>
             <groupId>org.apache.axis2</groupId>
             <artifactId>addressing</artifactId>
@@ -175,25 +175,13 @@
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                  <groupId>org.codehaus.mojo</groupId>
-                  <artifactId>build-helper-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>templating-maven-plugin</artifactId>
-                <version>1.0.0</version>
-                <executions>
-                  <execution>
-                    <id>filter-src</id>
-                    <goals>
-                      <goal>filter-sources</goal>
-                    </goals>
-                  </execution>
-                </executions>
-            </plugin>
-        </plugins>
+        <resources>
+          <resource>
+            <directory>src/main/resources</directory>
+            <excludes>
+              <exclude>xsd/**</exclude>
+            </excludes>
+          </resource>
+        </resources>
     </build>
-
 </project>
