--- a/modules/holodeckb2b-core/pom.xml
+++ b/modules/holodeckb2b-core/pom.xml
@@ -34,15 +34,11 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>holodeckb2b-common</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
             <artifactId>holodeckb2b-interfaces</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>holodeckb2b-persistency</artifactId>
+            <artifactId>holodeckb2b-common</artifactId>
         </dependency>
 
         <!-- Apache Axis2 kernel -->
@@ -108,10 +104,15 @@
             <artifactId>log4j-api</artifactId>
         </dependency>
 
-        <!-- JUnit for testing -->
+        <!-- Dependencies for testing -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>holodeckb2b-persistency</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
