Removed the dependency of tests from the org.holodeckb2b.persistency.EntityManagerUtil class. Tests use the org.holodeckb2b.persistency.test.EntityManagerUtil class now.

--- a/modules/holodeckb2b-core/pom.xml
+++ b/modules/holodeckb2b-core/pom.xml
@@ -157,6 +157,14 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>holodeckb2b-persistency</artifactId>
+            <version>next-201702-SNAPSHOT-4</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>holodeckb2b-common</artifactId>
             <version>next-201702-SNAPSHOT-4</version>
             <type>test-jar</type>
