Exclude dependencies from the aar file

--- a/modules/holodeckb2b-distribution/pom.xml
+++ b/modules/holodeckb2b-distribution/pom.xml
@@ -100,6 +100,7 @@
                           </includes>
                         </fileSet>
                     </fileSets>
+                    <includeDependencies>false</includeDependencies>
                 </configuration>
                 <executions>
                     <execution>
