Ensure that db directory is removed on clean

--- a/modules/holodeckb2b-core/pom.xml
+++ b/modules/holodeckb2b-core/pom.xml
@@ -176,6 +176,19 @@
     </dependencies>
 
     <build>
+        <plugins>
+            <plugin>
+              <artifactId>maven-clean-plugin</artifactId>
+              <configuration>
+                <filesets>
+                  <fileset>
+                    <directory>db</directory>
+                    <followSymlinks>false</followSymlinks>
+                  </fileset>
+                </filesets>
+              </configuration>
+            </plugin>
+        </plugins>
         <resources>
           <resource>
             <directory>src/main/resources</directory>
