--- a/modules/holodeckb2b-distribution/pom.xml
+++ b/modules/holodeckb2b-distribution/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.holodeckb2b</groupId>
         <artifactId>holodeckb2b</artifactId>
-        <version>4.0.0-SNAPSHOT-8</version>
+        <version>4.0.0-SNAPSHOT-9</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -90,7 +90,7 @@
                 <artifactId>axis2-aar-maven-plugin</artifactId>
                 <version>${axis2-version}</version>
                 <configuration>
-                    <aarName>hb2b-msh</aarName>
+                    <aarName>hb2b-as4-msh</aarName>
                     <fileSets>
                         <fileSet>
                           <directory>src/main/service/</directory>
